k8s/recipe-database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipe-database-deployment
  labels:
    app: recipe-database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recipe-database
  template:
    metadata:
      labels:
        app: recipe-database
    spec:
      containers:
        - name: recipe-database
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: recipedb
      volumes:
        - name: recipedb
          persistentVolumeClaim:
            claimName: recipe-database-storage
---
apiVersion: v1
kind: Service
metadata:
  name: recipe-database
spec:
  selector:
    app: recipe-database
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
