k8s/recipe-read-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipe-read-service
  labels:
    app: recipe-read-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recipe-read-service
  template:
    metadata:
      labels:
        app: recipe-read-service
    spec:
      containers:
        - name: recipe-read-service
          image: kruimlcontainerregister.azurecr.io/recipereadservice:latest
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: acr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: recipe-read-service
spec:
  selector:
    app: recipe-read-service
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
