k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Access-Control-Allow-Origin: $http_origin";
    nginx.ingress.kubernetes.io/cors-allow-credentials: 'true'
    nginx.ingress.kubernetes.io/cors-allow-methods: PUT, GET, POST, OPTIONS, DELETE, PATCH
    nginx.ingress.kubernetes.io/enable-cors: 'true'
spec:
  rules:
    - http:
        paths:
          - path: /rating
            pathType: Prefix
            backend:
              service:
                name: recipe-rating-service
                port:
                  number: 80
          - path: /recipe
            pathType: Prefix
            backend:
              service:
                name: recipe-read-service
                port:
                  number: 80
          - path: /addRecipe
            pathType: Prefix
            backend:
              service:
                name: recipe-write-service
                port:
                  number: 80
